--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-<h1>Hello, World</h1>!
+<!doctype html>
+<<!DOCTYPE html>
+<html>
+<head>
+	<title>Look where I am</title>
+	<!--  -->
+</head>
+<!-- Helllllllllllllo -->
+<body>
+<!-- hello world is not a head but a body -->
+<!-- the body includes the stuff that you want the user to see plus interact with -->
+<h1>hello,world!<h1>
+<h1>hello,world!<h1>
+<h1>hello world!<h1>
+<h1>hello, world!<h1>
+<h1>hello, world!<h1>
+
+<h2>look at here<h2>
+
+Here's how it works for tag attributes
+<a href="http://www.w3schools.com/html/">Visit our HTML tutorial</a>
+
+<p>
+   <img src= "http://www.w3schools.com/html/pic_mountain.jpg" alt="This is a kitten">
+   <img src="assets/giphy.gif" alt="picture of mountain"
+
+
+
+</body>
+</html>
